--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "surge --project . --domain localhost"
   },
   "dependencies": {
+    "alertify.js": "^1.0.10",
     "jquery": "^3.1.1",
     "semantic-ui-css": "^2.2.4",
     "vue": "^2.1.6"
